--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-search-box": "^2.3.0",
     "sass-loader": "^13.0.2",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
